Avoid context popup shown out of bounds

--- a/src/App.scss
+++ b/src/App.scss
@@ -417,7 +417,7 @@ hr {
     text-align: center;
     &.ShowToast {
         display: flex;
-        animation: ShowToast 0.5s;
+        animation: ShowToast 0.4s;
     }
     &.HideToast {
         animation: HideToast 0.5s;
@@ -502,6 +502,17 @@ hr {
     }
 }
 
+@keyframes FadeInToCenter {
+    from {
+        opacity: 0;
+        transform: translateX(-50%) translateY(0);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(-50%) translateY(-50%);
+    }
+}
+
 .MessageBox {
     position: fixed;
     top: 50%;
@@ -511,7 +522,7 @@ hr {
     color: white;
     min-width: 200px;
     box-shadow: 0px 2px 15px 1px rgba(0, 0, 0, 0.5);
-    animation: FadeIn 0.4s;
+    animation: FadeInToCenter 0.4s;
     .MessageBoxTitle {
         background-color: #444;
         height: 30px;
